<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iwAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/avatar"
        android:background="@drawable/ic_launcher_background"
        android:src="@drawable/ic_launcher_foreground"
        app:shapeAppearanceOverlay="@style/circleImageView"/>


    <TextView
        android:id="@+id/displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="60dp"
        android:text="@string/display_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/iwAvatar"
        app:layout_constraintStart_toEndOf="@+id/iwAvatar" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/iwAvatar"
        app:layout_constraintStart_toEndOf="@+id/iwAvatar" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#FF0000"
        android:padding="8dp"
        android:text="@string/logout"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnSave"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:backgroundTint="#518E31"
        android:padding="2dp"
        android:text="@string/save"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/iwAvatar"
        app:layout_constraintTop_toBottomOf="@+id/iwAvatar"
        tools:ignore="SmallSp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:backgroundTint="#FF0000"
        android:padding="2sp"
        android:text="@string/cancel"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/iwAvatar"
        app:layout_constraintTop_toBottomOf="@+id/iwAvatar"
        tools:ignore="SmallSp"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="156dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iwAvatar" />

    <ImageButton
        android:id="@+id/ibtnAddChat"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="52dp"
        android:background="@null"
        android:backgroundTint="@color/cardview_light_background"
        android:contentDescription="@string/avatar"
        android:src="@drawable/baseline_add_circle_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>