<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iwAvatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/avatar"
        android:background="@drawable/ic_launcher_background"
        android:src="@drawable/ic_launcher_foreground"
        app:shapeAppearanceOverlay="@style/circleImageView"/>

    <TextView
        android:id="@+id/displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/display_name"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/iwAvatar"
        app:layout_constraintTop_toTopOf="@+id/iwAvatar" />

    <TextView
        android:id="@+id/tvLastMessage"
        android:layout_width="246dp"
        android:layout_height="33dp"
        android:text="@string/last_message"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/iwAvatar"
        app:layout_constraintStart_toStartOf="@+id/displayName"
        app:layout_constraintTop_toBottomOf="@+id/displayName"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>